# LiveProbe

./: .env.example  .gitignore  LICENSE  Makefile  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
.github/workflows/: ci.yml  publish-mcp.yml  publish-sdks.yml
demo/: docker-compose.yml
demo/billing-worker/: e2e.py
demo/payment-service/: Dockerfile  README.md  package-lock.json  package.json
demo/payment-service/src/: server.ts
demo/payment-service/test/: e2e.test.ts
deploy/gcp/: README.md  bootstrap.sh  deploy.sh  docker-compose.gcp.yml  provision-monitoring.sh  provision-secrets.sh  recovery-drill.sh  refresh-firewall.sh  test.sh
deploy/gcp/lib/: common.sh
docs/: client-setup.md
java/bridge/: LICENSE  Makefile  README.md  pom.xml
java/bridge/src/main/java/io/liveprobe/bridge/: BrokerClient.java  Main.java  Protocol.java
java/bridge/src/test/java/io/liveprobe/bridge/: BridgeTests.java
python/sdk/: README.md  pyproject.toml
python/sdk/src/liveprobe/: __init__.py  runtime.py
python/sdk/tests/: test_integration.py  test_monitoring_smoke.py  test_runtime.py  test_scaffold.py
scripts/: check_supabase.py  java17.sh  redaction-audit.sh
spec/: protocol.md
